Ajustando import do css da barra do estadão no tema pure-line

--- a/wp-content/themes/pure-line/style.css
+++ b/wp-content/themes/pure-line/style.css
@@ -57,6 +57,10 @@ Date:         2/4/12
 /* Apply base theme styles and colors */
 @import url( 'library/media/css/base.css' );
 
+/* Apply Estadão bar css */
+@import url( 'library/media/css/estadao.css' );
+
+
 /**
  * Basic 2 column (content)(aside) fixed layout
  * 
